Fixed dark mode colours in options page

--- a/pages/darkMode.css
+++ b/pages/darkMode.css
@@ -57,12 +57,8 @@ span.vimiumHelpDialogKey
 
 /* for options page */
 
-#footer
+#footer, input[type="text"], textarea
 {
   background-color:#333333;
-}
-
-input[type="text"], textarea
-{
-  background-color: 
+  color:#D5D5D5;
 }
